Added subscribe form, Few changes in content view , Initial view support for instagram pics Removed spec.ts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
         <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col-6 col-xl-6 logo">
-                    <h1 class="mb-0"><a href="#" class="text-black h1 mb-0">Priya Haridas Kotnis</a></h1>
+                    <h1 class="mb-0"><a href="#" class="text-black h1 mb-0" style="font-family: League-Gothic;">Priya Haridas Kotnis</a></h1>
                 </div>
             </div>
 
@@ -22,7 +22,7 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="blogs/fashion">Fashion</a></li>
                         <li><a href="blogs/beauty">Beauty</a></li>
-                        <li><a href="blogs/lifestyle">Lifestyle</a></li>
+                        <li><a href="blogs/food">Food</a></li>
                         <li><a href="blogs/travel">Travel</a></li>
                     </ul>
                 </nav>
@@ -49,9 +49,17 @@
                   </ul>
                 </div>
                 <div class="col-md-4">
-                  <div class="mb-5">
+                    <div class="mb-5">
                         <div>
-                            <h3 class="footer-heading mb-4 text-black">Connect With Me</h3>
+                            <h3 class="footer-heading mb-4 text-black">Join My Fam!</h3>
+                            <form class="form-footer-subscribe">
+                                <div class="form-group ">
+                                    <input type="text" class="form-control" placeholder="Full Name"><br/>
+                                    <input type="text" class="form-control" placeholder="Email ID"><br/>
+                                    <input type="text" class="form-control" placeholder="Mobile Number"><br/>
+                                    <input type="submit" class="btn btn-primary text-white" value="Subscribe">
+                                </div>
+                            </form>
                             <p>
                                 <a href="#"><span class="icon-facebook pt-2 pr-2 pb-2 pl-0"></span></a>
                                 <a href="#"><span class="icon-twitter p-2"></span></a>
