--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -81,3 +81,15 @@
       </div>
     </div>
 </div>
+<div class="site-section">
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col-12 section-heading"><h2>Instagram Updates</h2></div>
+        </div>
+        <div class="row">
+            <div class="column" *ngFor="let slide of slides; let index=index">
+              <img [src]="slide" alt="Snow" style="width:100%">
+            </div>
+          </div>   
+    </div>
+</div>
