-Instagram posts support added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,7 @@
     <header class="site-navbar pt-3" role="banner" style="background-color: #fbceb1;">
         <div class="container-fluid">
             <div class="row align-items-center">
-                <div class="col-6 col-xl-6 logo">
-                    <h1 class="mb-0"><a href="#" class="text-black h1 mb-0" style="font-family: League-Gothic;">Priya Haridas Kotnis</a></h1>
-                </div>
+                <h1 class="col-6 col-xl-6 logo"><a href="#" class="headerText">PRIYA HARIDAS KOTNIS</a></h1>  
             </div>
 
             <div class="col-12 d-none d-xl-block border-top">
