--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -86,10 +86,6 @@
         <div class="row mb-5">
             <div class="col-12 section-heading"><h2>Instagram Updates</h2></div>
         </div>
-        <div class="row">
-            <div class="column" *ngFor="let slide of slides; let index=index">
-              <img [src]="slide" alt="Snow" style="width:100%">
-            </div>
-          </div>   
+        <app-instagram-updates></app-instagram-updates>   
     </div>
 </div>
