--- a/src/app/body/instagram-updates/instagram-updates.component.html
+++ b/src/app/body/instagram-updates/instagram-updates.component.html
@@ -6,7 +6,7 @@
 <ng-template #elseblock>
     <div class="row">
         <div class="column" *ngFor="let edges of instaData.graphql.user.edge_owner_to_timeline_media.edges; let index=index">
-            <div *ngIf="index < 6; then ifblock"></div>
+            <div *ngIf="index < 6 && ( edges.node.is_video == false ); then ifblock"></div>
             <ng-template #ifblock>
                     <img [src]="edges.node.display_url" alt="Snow" style="width:100%">
             </ng-template>
