--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <div class="site-wrap">
-    <header class="site-navbar pt-3" role="banner" style="background-color: #fbceb1;">
-        <div class="container-fluid">
-            <div class="row align-items-center">
-                <h1 class="col-6 col-xl-6 logo"><a href="#" class="headerText">PRIYA HARIDAS KOTNIS</a></h1>  
-            </div>
+    <header class="site-navbar" role="banner" style="background-color: #fbceb1;">
+        <!-- <div class="container-fluid"> -->
+            <!-- <div class="row align-items-center"> -->
+                <!-- <h1 class="col-6 logo"> -->
+                    <a href="#" class="headerText">PRIYA HARIDAS KOTNIS</a>
+                <!-- </h1>   -->
+            <!-- </div> -->
             <app-menu></app-menu> 
-        </div>
+        <!-- </div> -->
     </header>
     <div>
         <router-outlet></router-outlet>
