--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,12 +3,35 @@
     color:#000000;
     font-size: 50px;
     font-weight: bold;
+    margin-left: 29%;
 }
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
- @media screen and (max-width: 500px) {
+@media screen and (max-width: 500px) and (min-width:300px){
     .headerText{
-        font-size: 12px;
+        font-family: League-Gothic;
+        color:#000000;
+        font-size: 25px;
         font-weight: bold;
-        font-stretch: extra-expanded;
-    }    
+        margin-left: 3%;
+    }
+}
+
+@media screen and (max-width: 800px) and (min-width:501px){
+    .headerText{
+        font-family: League-Gothic;
+        color:#000000;
+        font-size: 50px;
+        font-weight: bold;
+        margin-left: 10%;
+    }
+}
+
+@media screen and (max-width: 1100px) and (min-width:801px){
+    .headerText{
+        font-family: League-Gothic;
+        color:#000000;
+        font-size: 50px;
+        font-weight: bold;
+        margin-left: 25%;
+    }
 }
