-Added new images -Added image compress module

--- a/src/app/body/latest-post/latest-post.component.html
+++ b/src/app/body/latest-post/latest-post.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-8 mb-5 mb-lg-0">
         <div>
-            <a href="single.html"><img src="../../assets/images/facebook2.jpg" alt="Image" class="img-fluid rounded"></a>  
+            <a href="single.html"><img src="../../assets/images_data/caraousel/cover_pic_3.jpg" alt="Image" class="img-fluid rounded"></a>  
               <div class="entry3 d-block d-sm-flex">
                   <div class="text mr-4 order-1">
                       <span class="post-category text-white bg-success mb-3">Blogs</span>
@@ -14,7 +14,7 @@
     </div>
     <div class="col-lg-4 pl-lg-4">
         <div class="bio text-center">
-            <img src="../../assets/images/bio2.jpg" alt="Image Placeholder" class="img-fluid mb-5">
+            <img src="../../assets/images_data/bio_pic_2.jpg" alt="Image Placeholder" class="img-fluid mb-5">
             <div class="bio-body">
                 <h2>Priya Haridas Kotnis</h2>
                 <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem facilis sunt repellendus excepturi beatae porro debitis voluptate nulla quo veniam fuga sit molestias minus.</p>
