--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -1,7 +1,7 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-light" [containerInside]="false">
     <mdb-navbar-brand>
         <a class="nav-link" href="#">
-            <img src="../../../assets/images/blogger.png"/>
+            <img src="../../../assets/images_data/blogger.png"/>
         </a>
     </mdb-navbar-brand>
     <links>
