--- a/src/app/blogs/generic-blog-list/generic-blog-list.html
+++ b/src/app/blogs/generic-blog-list/generic-blog-list.html
@@ -1,4 +1,4 @@
-<div class="site-cover site-cover-sm same-height overlay single-page" style="background-image: url('../../assets/images/facebook1.jpg');">
+<div class="site-cover site-cover-sm same-height overlay single-page" [ngStyle]="{'background-image': getUrl()}">
     <div class="container">
       <div class="row same-height justify-content-center">
         <div class="col-md-12 col-lg-10">
