--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -19,17 +19,26 @@
                     <h3 class="footer-heading mb-4 text-black">Join My Fam!</h3>
                     <form class="form-footer-subscribe">
                         <div class="form-group ">
-                            <input type="text" class="form-control" placeholder="Full Name"><br/>
-                            <input type="text" class="form-control" placeholder="Email ID"><br/>
-                            <input type="text" class="form-control" placeholder="Mobile Number"><br/>
-                            <input type="submit" class="btn btn-primary text-white" value="Subscribe">
+                            <div class="md-form">
+                                <input mdbInput placeholder="Enter your NAME here" type="text" id="name" class="form-control" >
+                                <label for="name">Name *</label>
+                            </div>
+                            <div class="md-form">
+                                <input mdbInput placeholder="Enter your Email ID here" type="text" id="email" class="form-control" >
+                                <label for="email">EmailID *</label>
+                            </div>
+                            <div class="md-form">
+                                <input mdbInput placeholder="Enter your Mobile number here" type="text" id="phone" class="form-control">
+                                <label for="phone">Mobile Number *</label>
+                            </div>
+                            <input mdbBtn color="primary" value="Subscribe">
                         </div>
                     </form>
                     <p>
-                        <a href="#"><span class="icon-facebook pt-2 pr-2 pb-2 pl-0"></span></a>
-                        <a href="#"><span class="icon-twitter p-2"></span></a>
-                        <a href="#"><span class="icon-instagram p-2"></span></a>
-                        <a href="#"><span class="icon-youtube p-2"></span></a>
+                        <a href="#"><span class="fa fa-instagram fa-2x p-2"></span></a>
+                        <a href="#"><span class="fa fa-facebook fa-2x p-2"></span></a>
+                        <a href="#"><span class="fa fa-twitter fa-2x p-2"></span></a>
+                        <a href="#"><span class="fa fa-youtube fa-2x p-2"></span></a>
                     </p>
                 </div>
             </div>
