--- a/src/app/admin-panel/adminblogdetail/adminblogdetail.component.html
+++ b/src/app/admin-panel/adminblogdetail/adminblogdetail.component.html
@@ -1,49 +1,10 @@
-<!-- Panel which displys on right side when we select the project-->
-<div class="row">
-    <div class="col-xs-12">
-      <!-- <img
-        [src]="pro.imagePath"
-        class="img-responsive"
-        style="max-height: 300px;"> -->
+<div class="btn-group" mdbDropdown>
+    <button mdbDropdownToggle type="button" mdbBtn color="default" class="dropdown-toggle waves-light"
+      mdbWavesEffect>
+      Manage Project
+    </button>
+    <div class="dropdown-menu dropdown-primary">
+      <a class="dropdown-item" href="#">Edit Project</a>
+      <a class="dropdown-item" href="#">Delete Project</a>
     </div>
-  </div>
-  
-  <div class="row">
-    <div class="col-xs-12">
-      <!-- <h1>{{ pro.name }}</h1> -->
-    </div>
-  </div>
-  
-  <div class="row">
-    <div class="col-xs-12">
-      <div
-        class="btn-group"
-        appDropdown>
-        
-        <button
-          type="button"
-          class="btn btn-primary dropdown-toggle">
-          Manage Project <span class="caret"></span>
-        </button>
-  
-        <ul class="dropdown-menu">
-          <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">Add To Prerequisite List</a></li>
-          <li><a style="cursor: pointer;" (click)="onEditProject()">Edit Project</a></li>
-          <li><a style="cursor: pointer;" (click)="onDeleteProject()">Delete Project</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  
-  <div class="row">
-    <div class="col-xs-12">
-    </div>
-  </div>
-  
-  <div class="row">
-    <div class="col-xs-12">
-      <ul class="list-group">
-      </ul>
-    </div>
-  </div>
-  
+</div>
