--- a/src/app/admin-panel/adminbloglist/adminbloglist.component.html
+++ b/src/app/admin-panel/adminbloglist/adminbloglist.component.html
@@ -1,13 +1,32 @@
 <div class="row">
     <div class="col-xs-12">
       <!-- Listener for button New Project -->
-      <button class="btn btn-success" (click)="onNewProject()">New Blog</button>
+      <button mdbBtn color="success" (click)="onNewProject()">New Blog</button>
     </div>
 </div>
 <hr>
+<!-- Section: Blog v.3 -->
+<section class="my-5">
+  <div class="row">
+    <div class="col-lg-5 col-xl-4">
+      <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4 waves-light" mdbWavesEffect>
+        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/49.jpg" alt="Sample image">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-7 col-xl-8">
+      <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
+      <p class="dark-grey-text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit
+            quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus
+            et aut officiis debitis cum soluta nobis est eligendi placeat facere aut rerum.</p>
+      <a mdbBtn color="info" mdbWavesEffect>Select</a>
+    </div>
+  </div>
+</section>
 <div class="row">
     <div class="col-xs-12">
-      <!--Iterate all projects and display it -->
         <app-adminblogdetail>
         </app-adminblogdetail>
     </div>
