--- a/src/app/blogs/blog-content/blog-content.component.html
+++ b/src/app/blogs/blog-content/blog-content.component.html
@@ -3,8 +3,8 @@
       <div class="row same-height justify-content-center">
         <div class="col-md-12 col-lg-10">
           <div class="post-entry text-center">
-            <span class="post-category text-white bg-success mb-3">Nature</span>
-            <h1 class="mb-4"><a href="#">The 20 Biggest Fintech Companies In America 2019</a></h1>
+            <span class="post-category text-white bg-success mb-3">{{post.type}}</span>
+            <h1 class="mb-4"><a href="#">{{post.title}}</a></h1>
             <div class="post-meta align-items-center text-center">
               <span>&nbsp;-&nbsp; February 10, 2019</span>
             </div>
@@ -19,19 +19,17 @@
       <div class="row blog-entries element-animate">
         <div class="main-content">
           <div class="post-content-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nam quas inventore, ut iure iste modi eos adipisci ad ea itaque labore earum autem nobis et numquam, minima eius. Nam eius, non unde ut aut sunt eveniet rerum repellendus porro.</p>
-            <p>Sint ab voluptates itaque, ipsum porro qui obcaecati cumque quas sit vel. Voluptatum provident id quis quo. Eveniet maiores perferendis officia veniam est laborum, expedita fuga doloribus natus repellendus dolorem ab similique sint eius cupiditate necessitatibus, magni nesciunt ex eos.</p>
-            <p>Quis eius aspernatur, eaque culpa cumque reiciendis, nobis at earum assumenda similique ut? Aperiam vel aut, ex exercitationem eos consequuntur eaque culpa totam, deserunt, aspernatur quae eveniet hic provident ullam tempora error repudiandae sapiente illum rerum itaque voluptatem. Commodi, sequi.</p>
+            <p>{{post.description}}</p>
             <div class="row mb-5 mt-5">
               <div class="col-md-6 mb-4">
-                <img src="../../assets/images_data/caraousel/cover_pic_4.jpg" alt="Image placeholder" class="img-fluid rounded">
+                <img src={{post.pic1}} alt="Image placeholder" class="img-fluid rounded">
               </div>
               <div class="col-md-6 mb-4">
-                <img src="../../assets/images_data/caraousel/cover_pic_3.jpg" alt="Image placeholder" class="img-fluid rounded">
+                <img src={{post.pic2}} alt="Image placeholder" class="img-fluid rounded">
               </div>
             </div>
             <div class="col-md-15 mb-4">
-              <img src="../../assets/images_data/caraousel/cover_pic_5.jpg" alt="Image placeholder" style="width: 100%;">
+              <img src={{post.pic3}} alt="Image placeholder" style="width: 100%;">
             </div>    
           </div>
         </div>
