--- a/src/app/blogs/generic-blog-list/generic-blog-list.html
+++ b/src/app/blogs/generic-blog-list/generic-blog-list.html
@@ -11,21 +11,25 @@
     </div>
 </div>
 <section class="site-section py-lg">
-    <div class="container">
-        <div class="row blog-entries element-animate mb-5">
-            <div class="col-md-12 col-lg-8 main-content">
-                <a href="#">
-                <div class="entry2 mb-5">
-                    <img src="../../assets/images/facebook1.jpg" alt="Image" class="img-fluid rounded">
-                    <h2>The 20 Biggest Fintech Companies In America 2019</h2>
-                    <div class="post-meta align-items-center text-left clearfix">
-                        <span class="d-inline-block mt-1">By Carrol Atkinson</span>
-                        <span>&nbsp;-&nbsp; February 10, 2019</span>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sunt tempora dolor laudantium sed optio. laborum error in eum id veritatis quidem neque nesciunt at architecto nam ullam, officia unde dolores officiis veniam</p>
-                </div>
+  <div class="container">
+      <section class="my-5">
+        <div *ngFor="let post of latestPosts">
+          <div class="row">
+            <div class="col-lg-5">
+              <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4 waves-light" mdbWavesEffect>
+                <img class="img-fluid" src={{post.coverPhoto}} alt="Sample image">
+                <a>
+                  <div class="mask rgba-white-slight"></div>
                 </a>
+              </div>
             </div>
+            <div class="col-lg-7">
+              <h3 class="font-weight-bold mb-3"><strong>{{post.title}}</strong></h3>
+              <p>{{post.description}}</p>
+              <a mdbBtn color="success" mdbWavesEffect>Read more</a>
+            </div>
+          </div><br/>
         </div>
-    </div>
+      </section>
+  </div>
 </section>
